--- a/source/unit-test/fds-probe/Makefile.s3
+++ b/source/unit-test/fds-probe/Makefile.s3
@@ -15,7 +15,8 @@ user_fds_ar_libs  +=  \
     fds-am-plat \
     fds-dsk-io \
     fds-dsk-mgnt \
-    fds-hash
+    fds-hash \
+    fds-xdi
 
 local_nginx_libs   :=  \
     ngx-http-module \
