[WIN-992, WIN-994] standalone SM performance test and testing multiple volumes.

--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -36,6 +36,7 @@ user_non_fds_libs :=  \
 user_cpp          := \
 	object_store_unit_test.cpp \
 	object_store_load_test.cpp \
+        sm_load_test.cpp \
         metastore_unit_test.cpp   \
         sm_disk_map_test.cpp      \
         sm_token_place_gtest.cpp
@@ -44,6 +45,7 @@ user_no_style     := sm_unit_test.cpp
 user_bin_exe      := \
     ObjectStoreUnitTest \
     ObjectStoreLoadTest \
+    sm_load_test        \
     metastore_unit_test \
     smdiskmap_unit_test \
     smtokenplace_gtest
@@ -53,5 +55,6 @@ ObjectStoreLoadTest := object_store_load_test.cpp
 metastore_unit_test := metastore_unit_test.cpp
 smdiskmap_unit_test := sm_disk_map_test.cpp
 smtokenplace_gtest  := sm_token_place_gtest.cpp
+sm_load_test        := sm_load_test.cpp
 
 include $(topdir)/Makefile.incl
