--- a/source/unit-test/stor-mgr/sm_ut.conf
+++ b/source/unit-test/stor-mgr/sm_ut.conf
@@ -85,4 +85,35 @@ fds:
 
         enable_graphite=false
     }
+    sm_load:
+    {
+	/* Log file */
+	logfile="sm_load.log"
+
+	/* Log severity */
+        log_severity="notification"
+
+        volume0:
+        {
+            object_size=4096
+
+            /* concurrency */
+            concurrency=30
+
+            /* dataset size in number of objects */
+            dataset_size=10000
+
+            /* number of operations */
+            num_ops=10000
+
+            /* operation type (does not apply to smoke test) */
+            op_type="put"
+
+            iops_min=0
+            iops_max=0
+            priority=1
+        }
+
+        enable_graphite=false
+    }
 }
