[WIN-993] extended ObjectStore load test to use common dataset class that now implements more types of workloads.

--- a/source/unit-test/stor-mgr/sm_ut.conf
+++ b/source/unit-test/stor-mgr/sm_ut.conf
@@ -72,7 +72,7 @@ fds:
         object_size=4096
 
         /* number of threads (does not apply to smoke test) */
-        num_threads=30
+        concurrency=30
 
         /* dataset size in number of objects */
         dataset_size=100000
@@ -82,6 +82,10 @@ fds:
 
         /* operation type (does not apply to smoke test) */
         op_type="put"
+
+        iops_min=0
+        iops_max=0
+        priority=1
 
         enable_graphite=false
     }
@@ -106,7 +110,7 @@ fds:
             /* number of operations */
             num_ops=10000
 
-            /* operation type (does not apply to smoke test) */
+            /* operation type: put, get, delete, dup */
             op_type="put"
 
             iops_min=0
