Updated commit-check.py as well as adding start of smchecker

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -7,12 +7,12 @@ fds: {
 
     authentication=true
 
-    ssl: {
+    //ssl: {
 	/* path relative to fds_root */
-	keystore_path="etc/ssl/dev/keystore"
-        keystore_password="exotic sparrow"
-	keymanager_password="exotic sparrow"
-    }
+	//keystore_path="etc/ssl/dev/keystore"
+    //    keystore_password="exotic sparrow"
+	//	keymanager_password="exotic sparrow"
+    //}
 
     plat: {
         /* process id */
