sm component level unit test for doing puts

--- a/source/unit-test/fds-probe/example/Makefile
+++ b/source/unit-test/fds-probe/example/Makefile
@@ -4,12 +4,12 @@ user_incl_dir     :=
 
 user_fds_so_libs  :=
 user_fds_ar_libs  := 
-user_non_fds_libs := gmock
-user_no_style     := smapi_gtest.cpp
+user_non_fds_libs :=
+user_no_style     :=
 user_hh           := $(wildcard *.h)
 user_cc           := ngx_modules.c
 user_cpp          := \
-    smapi_gtest.cpp
+    test-app.cpp
 
 user_bin_exe      := example-svc
 example-svc       := $(user_cpp) $(user_cc)
