simple sm test using gtest based component unit test framework

--- a/source/unit-test/data-mgr/Makefile
+++ b/source/unit-test/data-mgr/Makefile
@@ -9,7 +9,8 @@ user_fds_ar_libs  := \
     fds-lib \
     fds-dm-plat \
     fds-dm-lib \
-    fds-dsk-mgnt
+    fds-dsk-mgnt \
+    fds-xdi
 
 user_non_fds_libs := \
     gmock \
