--- a/source/checker/Makefile
+++ b/source/checker/Makefile
@@ -21,7 +21,8 @@ user_fds_ar_libs  := \
     fds-dsk-mgnt \
     fds-dsk-io \
     fds-odb \
-    fds-vpolicy
+    fds-vpolicy \
+    fds-xdi
 
 user_non_fds_libs := \
     boost_timer \
