Complete node workflow coordination framework to coordinate actions among components to make a node functional in a domain.

--- a/source/java/Makefile
+++ b/source/java/Makefile
@@ -29,7 +29,7 @@ compile:
 	@mvn -DskipTests assembly:directory -Dbuild.dir=$(comm_dir_lib)/java
 	@mkdir $(comm_dir_lib)/admin-webapp
 	#@cd admin-webapp; npm install; npm install bower; CI=true node_modules/bower/bin/bower install; node_modules/grunt-cli/bin/grunt release
-	@cd admin-webapp; npm install; CI=true node_modules/bower/bin/bower install; node_modules/grunt-cli/bin/grunt release
-	@cp -r admin-webapp/app/* $(comm_dir_lib)/admin-webapp
+	#@cd admin-webapp; npm install; CI=true node_modules/bower/bin/bower install; node_modules/grunt-cli/bin/grunt release
+	#@cp -r admin-webapp/app/* $(comm_dir_lib)/admin-webapp
 	@cp -r demo $(comm_dir_lib)
 	@cp smokeTest $(main_dir_tools)
