--- a/source/unit-test/lib/dlt/Makefile
+++ b/source/unit-test/lib/dlt/Makefile
@@ -18,7 +18,7 @@ user_non_fds_libs := \
 	boost_thread \
 	boost_date_time \
 	boost_program_options \
-    leveldb thrift rt config++
+    leveldb thrift rt config++ fiu dl
 
 user_cpp          :=                   \
     dlt_unit_test.cpp
