--- a/source/checker/Makefile
+++ b/source/checker/Makefile
@@ -8,7 +8,7 @@ user_incl_dir     := \
 	$(topdir) \
 	$(topdir)/stor-mgr/include \
 	$(topdir)/stor-mgr/migrations \
-    $(topdir)/am-app/include \
+    $(topdir)/access-mgr/include \
 	$(topdir)/lib
 
 user_cpp_flags    :=
