--- a/source/unit-test/fds-probe/data-mgr/tvc/Makefile
+++ b/source/unit-test/fds-probe/data-mgr/tvc/Makefile
@@ -6,7 +6,7 @@ user_install      :=
 
 user_incl_dir     := \
     $(local_topdir)/data-mgr/include \
-    $(local_topdir)/am-app/include \
+    $(local_topdir)/access-mgr/include \
     $(local_topdir) \
     $(local_topdir)/lib
 
