--- a/source/unit-test/fds-probe/s3/Makefile
+++ b/source/unit-test/fds-probe/s3/Makefile
@@ -1,7 +1,7 @@
 probe_topdir      := ..
 
 user_incl_dir     := \
-    $(probe_topdir)/../../am-app/include
+    $(probe_topdir)/../../access-mgr/include
 
 user_cpp_flags    :=
 user_fds_so_libs  :=
