WIN-1059 Move stor-hvisor code under access-mgr directory.

--- a/source/access-mgr/Makefile
+++ b/source/access-mgr/Makefile
@@ -2,8 +2,8 @@ topdir            := ..
 user_target       := exe
 user_rtime_env    := user
 speedup           := -j 6
-user_build_dir    := include platform
-user_incl_dir     := $(topdir)/fds_client/include include
+user_build_dir    := stor-hvisor include platform
+user_incl_dir     := stor-hvisor include
 user_cpp_flags    :=
 user_fds_so_libs  :=
 user_fds_ar_libs  :=  \
