--- a/source/persistent_layer/Makefile
+++ b/source/persistent_layer/Makefile
@@ -1,5 +1,5 @@
 topdir         := ..
 speedup        := -j 5
-user_build_dir := io-lib mgnt-lib include
+user_build_dir := io-lib mgnt-lib
 
 include $(topdir)/Makefile.incl
