--- a/source/access-mgr/amlib/handlers/Makefile
+++ b/source/access-mgr/amlib/handlers/Makefile
@@ -1,8 +1,8 @@
-topdir           := ../../
+topdir           := ../../..
 user_target      := lib
 user_rtime_env   := user
 user_build_dir   :=
-user_incl_dir    :=
+user_incl_dir    := ../../include
 user_cpp         :=  $(wildcard *.cpp)              
 user_ar_libs     := fds-am-engine
 fds-am-engine    := $(user_cpp)
