--- a/source/access-mgr/stor-hvisor/Makefile
+++ b/source/access-mgr/stor-hvisor/Makefile
@@ -1,5 +1,6 @@
 topdir            := ../..
 speedup           := -j 5
 user_build_dir    := handler hvcore
+user_incl_dir     := ../include
 
 include $(topdir)/Makefile.incl
