--- a/source/unit-test/lib/Makefile
+++ b/source/unit-test/lib/Makefile
@@ -37,7 +37,9 @@ user_cpp          :=  \
     sharedcache_unit_test.cpp \
     sharedcache_gtest.cpp \
     object_logger_test.cpp \
-    HashedLocks_ut.cpp
+    HashedLocks_ut.cpp \
+    serializer_gtest.cpp
+
 
 user_cc           :=
 user_no_style     :=                \
@@ -49,7 +51,8 @@ user_no_style     :=                \
     counters_test.cpp               \
     trans_journal_ut.cpp            \
     SynchronizedTaskExecutor_ut.cpp \
-    perf_trace_unit_test.cpp
+    perf_trace_unit_test.cpp	    \
+    serializer_gtest.cpp
 
 user_bin_exe      := \
     fds_timer_test \
@@ -66,7 +69,8 @@ user_bin_exe      := \
     kvcache_unit_test \
     object_logger_test \
     Tracebuffer_ut \
-    HashedLocks_ut
+    HashedLocks_ut \
+    serializer_gtest
 
 catalog_test                   := catalog_unit_test.cpp
 perfstat_unit_test             := perfstat_unit_test.cpp
@@ -83,5 +87,6 @@ kvcache_unit_test              := kvcache_unit_test.cpp
 object_logger_test             := object_logger_test.cpp
 Tracebuffer_ut		       := Tracebuffer_ut.cpp
 HashedLocks_ut		       := HashedLocks_ut.cpp
+serializer_gtest	       := serializer_gtest.cpp       
 
 include $(topdir)/Makefile.incl
