--- a/source/access-mgr/platform/Makefile
+++ b/source/access-mgr/platform/Makefile
@@ -2,7 +2,7 @@ topdir            := ../..
 user_target       := lib
 user_rtime_env    := user
 user_build_dir    :=
-user_incl_dir     := $(topdir)/am-engine/include ../include $(topdir) ../stor-hvisor
+user_incl_dir     := ../include $(topdir) ../stor-hvisor
 user_cpp_flags    :=
 user_cpp          := \
         AMSvcHandler.cpp\
