--- a/source/unit-test/fds-probe/Makefile.svc
+++ b/source/unit-test/fds-probe/Makefile.svc
@@ -7,7 +7,7 @@ user_incl_dir     += \
     $(topdir)/fds-probe/include \
 	$(topdir)/platform/include \
 	$(topdir)/access-mgr/include \
-    $(topdir)/am-engine \
+    $(topdir)/nginx-driver \
     $(topdir)
 
 user_cpp_flags    +=
