Wire up plugin to node workflow sequene in all components.

--- a/source/data-mgr/platform/Makefile
+++ b/source/data-mgr/platform/Makefile
@@ -5,7 +5,8 @@ user_build_dir    :=
 user_incl_dir     := $(topdir) ../include
 user_cpp_flags    :=
 user_cpp          := \
-	dm-platform.cpp
+	dm-platform.cpp \
+    dm-node-workflow.cpp
 
 user_ar_libs      := fds-dm-plat
 fds-dm-plat       := $(user_cpp)
