--- a/source/platform/common/Makefile
+++ b/source/platform/common/Makefile
@@ -6,7 +6,8 @@ user_incl_dir    := ../include ../../net-service/include
 user_cpp         := \
     platform.cpp \
     platform-proc.cpp \
-    platform-shm-rw.cpp
+    platform-shm-rw.cpp \
+    plat-node-workflow.cpp
 
 user_ar_libs     := fds-plat-daemon
 fds-plat-daemon  := $(user_cpp)
