--- a/source/stor-mgr/platform/Makefile
+++ b/source/stor-mgr/platform/Makefile
@@ -5,7 +5,8 @@ user_build_dir    :=
 user_incl_dir     := $(topdir) ../include
 user_cpp_flags    :=
 user_cpp          := \
-	sm-platform.cpp
+	sm-platform.cpp \
+    sm-node-workflow.cpp
 
 user_ar_libs      := fds-sm-plat
 fds-sm-plat       := $(user_cpp)
