--- a/source/access-mgr/platform/Makefile
+++ b/source/access-mgr/platform/Makefile
@@ -2,11 +2,17 @@ topdir            := ../..
 user_target       := lib
 user_rtime_env    := user
 user_build_dir    :=
-user_incl_dir     := $(topdir)/am-engine/include ../include $(topdir) ../stor-hvisor
+user_incl_dir     := \
+	$(topdir)/am-engine/include \
+	../include \
+	$(topdir) \
+	../stor-hvisor
+
 user_cpp_flags    :=
 user_cpp          := \
-        AMSvcHandler.cpp\
-	am-platform.cpp
+    AMSvcHandler.cpp \
+	am-platform.cpp \
+    am-node-workflow.cpp
 
 user_ar_libs      := fds-am-plat
 fds-am-plat       := $(user_cpp)
