Update Makefile comments and fastbuild.sh directory list format
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/Makefile
+++ b/source/Makefile
@@ -5,9 +5,10 @@ endif
 
 topdir         := .
 
-# List all directories that builds library first before making exe and unit
-# test.
+# List all directories that builds library first before making exe and unit test
 # List one module/line to minimize conflict during merge.
+#
+# Keep this list sychronized with fastbuild.sh
 #
 user_build_dir :=                       \
     fdsp                                \
