WIN-1076 Initial files for the AmDispatcher. Doesn't have an interface yet.

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -269,6 +269,8 @@ fds: {
 
 	/* Internal testing related info */
 	testing: {
+	    /* Forces all AM dispatcher APIs to immediately return success */
+	    uturn_dispatcher_all = false
 	    /* Test mode to bypass local catalog cache */
 	    disable_vcc = true
 	    /* Forces all AM service APIs to immediately return success */
