Fix build issue with relocated header file.

--- a/source/access-mgr/include/Makefile
+++ b/source/access-mgr/include/Makefile
@@ -2,6 +2,7 @@ topdir         := ../..
 user_target    := lib
 user_rtime_env := user
 user_build_dir :=
+user_incl_dir  := ../stor-hvisor
 user_hh        := $(wildcard *.h)
 user_hpp       := $(wildcard *.h)
 
