--- a/source/tools/Makefile
+++ b/source/tools/Makefile
@@ -5,19 +5,27 @@ user_rtime_env	  := user
 
 user_incl_dir     := \
     $(topdir)/platform/include \
-    $(topdir)/net-service/include
+    $(topdir)/net-service/include \
+    $(topdir)/data-mgr/include
 
-user_cpp_flags    :=
+user_cpp_flags    := -DLEVELDB_PLATFORM_POSIX
 user_fds_so_libs  :=
-user_fds_ar_libs  := 
+user_fds_ar_libs  := \
+    fds-dm-lib
 
-user_non_fds_libs := 
+user_non_fds_libs := \
+    leveldb
 
 user_hh           := $(wildcard *.h)
 user_cpp          := \
-    shm_dump.cpp
+    shm_dump.cpp \
+    journal_dump.cpp
 
-user_bin_exe      := shm_dump
-shm_dump          := $(user_cpp)
+user_no_style     := \
+    journal_dump.cpp
+
+user_bin_exe      := shm_dump journal-dump
+shm_dump          := shm_dump.cpp
+journal-dump      := journal_dump.cpp
 
 include $(topdir)/Makefile.incl
