Move the main coordinator from master PM to OM. - Rewire the workitem object to be at the base class shared by both PM and OM. - Once we take out NetSession, OM's NodeAgent class hierachy can be rewired to be the same as other components.

--- a/source/orch-mgr/om-domain/Makefile
+++ b/source/orch-mgr/om-domain/Makefile
@@ -8,6 +8,6 @@ user_cpp          := \
     domain.cpp
 
 user_ar_libs      := fds-om-lib
-fds-om-dlt        := $(user_cpp)
+fds-om-lib        := $(user_cpp)
 
 include $(topdir)/Makefile.incl
