--- a/chef/site-cookbooks/logstash/files/default/fds-cloud.conf
+++ b/chef/site-cookbooks/logstash/files/default/fds-cloud.conf
@@ -1,6 +1,13 @@
 input {
 
     file {
+    path => [ "/fds/var/logs/redis/redis-server.log" ]
+        type => "redis-server-log"
+        start_position => "beginning"
+        sincedb_path => "/var/lib/logstash/.sincedb_redis"
+    }
+
+    file {
     path => [ "/fds/var/logs/am.log_*.log" ]
         type => "am-log"
         start_position => "beginning"
@@ -9,6 +16,7 @@ input {
             negate => true
             what => previous
         }
+        sincedb_path => "/var/lib/logstash/.sincedb_am_log"
     }
 
     file {
@@ -20,6 +28,7 @@ input {
             negate => true
             what => previous
         }
+        sincedb_path => "/var/lib/logstash/.sincedb_cli_log"
     }
 
     file {
@@ -31,6 +40,7 @@ input {
             negate => true
             what => previous
         }
+        sincedb_path => "/var/lib/logstash/.sincedb_dm_log"
     }
 
     file {
@@ -42,6 +52,7 @@ input {
             negate => true
             what => previous
         }
+        sincedb_path => "/var/lib/logstash/.sincedb_om_log"
     }
 
     file {
@@ -53,6 +64,7 @@ input {
             negate => true
             what => previous
         }
+        sincedb_path => "/var/lib/logstash/.sincedb_platform_log"
     }
 
     file {
@@ -64,6 +76,7 @@ input {
             negate => true
             what => previous
         }
+        sincedb_path => "/var/lib/logstash/.sincedb_sm_log"
     }
 
 }
@@ -84,13 +97,38 @@ filter {
                 remove_field => [ "msgbody", "eventtime" ]
         }
     }
+    else if [type] == "redis-server-log" {
+        grok {
+            patterns_dir => "/opt/logstash/patterns/redis-updated"
+            match => [ "message", "\[%{NUMBER:pid}\] %{REDISSERVERTIMESTAMP:eventtime} %{DATA:char} %{GREEDYDATA:msgbody}" ]
+        }
+
+        date {
+            match => [ "eventtime", "dd MMM HH:mm:ss.SSS" ]
+        }
+
+        mutate {
+            replace => [ "message", "%{msgbody}" ]
+            remove_field => [ "msgbody", "eventtime" ]
+        }
+    }
+
 }
 
 output {
 #   stdout { codec => rubydebug }
+#    if [type] in ["am-log", "om-log", "dm-log", "cli-log", "platform-log", "sm-log" ] {
     elasticsearch_http {
         host => "71.56.237.218"
         index => "logstash-%{+YYYY.MM.dd}"
         port => 59200
     }
+#    }
+#    else if [type] == "redis-server-log" {
+#        elasticsearch_http {
+#            host => "71.56.237.218"
+#            index => "redis-%{+YYYY.MM.dd}"
+#            port => 59200
+#        }
+#    }
 }
