--- a/chef/vagrant/fds_setup/Vagrantfile
+++ b/chef/vagrant/fds_setup/Vagrantfile
@@ -23,9 +23,10 @@ Vagrant.configure("2") do |config|
     # Use bridged mode networking
     config.vm.network :private_network, ip: "172.16.8.10"
 
+    config.vm.synced_folder "../../..", "/fds-src"
+
     config.vm.provision "shell",
       inline: "curl -L https://www.getchef.com/chef/install.sh | sudo bash"
-
 
     config.vm.provision "chef_solo" do |chef|
       chef.cookbooks_path = [ "../../cookbooks", "../../site-cookbooks" ]
