WIN-983.3: Flesh out test cases.

--- a/source/test/testsuites/BuildSmokeTest.ini
+++ b/source/test/testsuites/BuildSmokeTest.ini
@@ -3,7 +3,7 @@
 test_source_dir: ./testcases
 log_dir: ~/tests/BuildSmokeTest
 log_level: 20               # DEBUG:10; INFO:20; WARNING:30; ERROR:40
-stop_on_fail: False
+stop_on_fail: True
 run_as_root: False
 threads: 1
 iterations: 1
