--- a/.gitignore
+++ b/.gitignore
@@ -94,5 +94,6 @@ source/java/target
 source/am-engine/misc/build.linux-x86_64
 source/unit-test
 source/am-engine
+chef/nodes
 chef/vagrant/*/.vagrant/*
 source/java/${project.build.dir}
