--- a/chef/vagrant/fds_setup/Vagrantfile
+++ b/chef/vagrant/fds_setup/Vagrantfile
@@ -23,20 +23,20 @@ Vagrant.configure("2") do |config|
     # Use bridged mode networking
     config.vm.network :private_network, ip: "172.16.8.10"
 
-    config.vm.synced_folder "../../..", "/fds-src"
+    config.vm.synced_folder "../../..", "/home/vagrant/fds-src"
 
-    config.vm.provision "shell",
-      inline: "curl -L https://www.getchef.com/chef/install.sh | sudo bash"
+#    config.vm.provision "shell",
+#      inline: "curl -L https://www.getchef.com/chef/install.sh | sudo bash"
 
-    config.vm.provision "chef_solo" do |chef|
-      chef.cookbooks_path = [ "../../cookbooks", "../../site-cookbooks" ]
-      chef.roles_path = "../../roles"
-      chef.data_bags_path = "../../data_bags"
-      chef.add_recipe "fds_setup::dev_setup"
+#    config.vm.provision "chef_solo" do |chef|
+#      chef.cookbooks_path = [ "../../cookbooks", "../../site-cookbooks" ]
+#      chef.roles_path = "../../roles"
+#      chef.data_bags_path = "../../data_bags"
+#      chef.add_recipe "fds_setup::dev_setup"
     
       # You may also specify custom JSON attributes:
       #chef.json = { mysql_password: "foo" }
-    end
+#    end
 
 
   end
