WIN-1079 Starting to move startBlobTx functionality. Not complete. Mostly just example code.

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -269,6 +269,8 @@ fds: {
 
 	/* Internal testing related info */
 	testing: {
+            /* Toggle old or new processing path */
+	    toggleNewPath = false
 	    /* Forces all AM dispatcher APIs to immediately return success */
 	    uturn_dispatcher_all = false
 	    /* Test mode to bypass local catalog cache */
