--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -67,7 +67,8 @@ user_cpp          := \
         metastore_unit_test.cpp   \
         sm_disk_map_test.cpp      \
         sm_token_place_gtest.cpp \
-	smapi_gtest.cpp
+	smapi_gtest.cpp \
+	smperf_gtest.cpp
 
 user_no_style     := sm_unit_test.cpp\
 		sm_super_block_buf.cpp \
@@ -82,7 +83,8 @@ user_bin_exe      := \
     smtokenplace_gtest \
     smapi_gtest \
 	sm_super_block_buf \
-	sm_super_block_gtest 
+	sm_super_block_gtest \
+	smperf_gtest
 
 ObjectStoreUnitTest := object_store_unit_test.cpp
 ObjectStoreLoadTest := object_store_load_test.cpp
@@ -93,5 +95,7 @@ smapi_gtest	    := smapi_gtest.cpp ngx_modules.c
 sm_load_test        := sm_load_test.cpp
 sm_super_block_buf := sm_super_block_buf.cpp
 sm_super_block_gtest := sm_super_block_gtest.cpp
+smperf_gtest         := smperf_gtest.cpp ngx_modules.c
+
 
 include $(topdir)/Makefile.incl
