--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -69,9 +69,7 @@ user_cpp          := \
         sm_token_place_gtest.cpp \
 	smapi_gtest.cpp
 
-user_no_style     := sm_unit_test.cpp\
-		sm_super_block_buf.cpp \
-		sm_super_block_gtest.cpp
+user_no_style     := sm_unit_test.cpp
 
 user_bin_exe      := \
     ObjectStoreUnitTest \
@@ -81,8 +79,7 @@ user_bin_exe      := \
     smdiskmap_unit_test \
     smtokenplace_gtest \
     smapi_gtest \
-	sm_super_block_buf \
-	sm_super_block_gtest 
+	sm_superblock_gtest 
 
 ObjectStoreUnitTest := object_store_unit_test.cpp
 ObjectStoreLoadTest := object_store_load_test.cpp
@@ -91,7 +88,6 @@ smdiskmap_unit_test := sm_disk_map_test.cpp
 smtokenplace_gtest  := sm_token_place_gtest.cpp
 smapi_gtest	    := smapi_gtest.cpp ngx_modules.c
 sm_load_test        := sm_load_test.cpp
-sm_super_block_buf := sm_super_block_buf.cpp
-sm_super_block_gtest := sm_super_block_gtest.cpp
+sm_superblock_gtest := sm_superblock_gtest.cpp
 
 include $(topdir)/Makefile.incl
