--- a/source/test/testsuites/BuildSmokeTest_debug_system_test.ini
+++ b/source/test/testsuites/BuildSmokeTest_debug_system_test.ini
@@ -1,10 +1,10 @@
 [harness]
 # Parameters for Jenkins build on commit testing
 test_source_dir: ../source/test/testsuites/testcases
-log_dir: /home/jenkins/workspace/dev_on_commit_build_docker/source/cit
-log_level: 20               # DEBUG:10; INFO:20; WARNING:30; ERROR:40
+log_dir: ~/workspace/debug_system_test_docker/source/cit
+log_level: 10               # DEBUG:10; INFO:20; WARNING:30; ERROR:40
 stop_on_fail: False
-run_as_root: False
+run_as_root: True
 threads: 1
 iterations: 1
 
