--- a/source/test/testsuites/BuildSmokeTest_debug_system_test.ini
+++ b/source/test/testsuites/BuildSmokeTest_debug_system_test.ini
@@ -1,10 +1,10 @@
 [harness]
-# Parameters for Jenkins build on commit testing
-test_source_dir: ../source/test/testsuites/testcases
-log_dir: ~/workspace/debug_system_test_docker/source/cit
+# Parameters for Jenkins system test testing (Debug the system test)
+test_source_dir: ./testcases
+log_dir: ../../cit
 log_level: 10               # DEBUG:10; INFO:20; WARNING:30; ERROR:40
-stop_on_fail: False
-run_as_root: True
+stop_on_fail: True
+run_as_root: False
 threads: 1
 iterations: 1
 
