--- a/source/test/testsuites/BuildSmokeTest_oncommit.ini
+++ b/source/test/testsuites/BuildSmokeTest_oncommit.ini
@@ -1,9 +1,9 @@
 [harness]
 # Parameters for Jenkins build on commit testing
-test_source_dir: ../source/test/testsuites/testcases
-log_dir: /home/jenkins/workspace/dev_on_commit_build_docker/source/cit
+test_source_dir: ./testcases
+log_dir: ../../cit
 log_level: 20               # DEBUG:10; INFO:20; WARNING:30; ERROR:40
-stop_on_fail: False
+stop_on_fail: True
 run_as_root: False
 threads: 1
 iterations: 1
