remove devsetup dependency installations from Dockerfile, replace with OAuth clone of fds-src and a call to 'make devsetup'

--- a/docker/spoon-fds/Dockerfile
+++ b/docker/spoon-fds/Dockerfile
@@ -14,27 +14,11 @@ RUN locale-gen en_US.UTF-8
 # If you run into 404's during package installs, update the date here to todays date
 RUN apt-get update #20140926
 
-RUN apt-get -y purge openjdk*
-RUN apt-get install -y python-software-properties software-properties-common python-setuptools
-RUN add-apt-repository -y ppa:webupd8team/java
-RUN add-apt-repository -y ppa:chris-lea/redis-server
-RUN apt-get update
 RUN apt-get install -y zip openssl git ack-grep python wget xsel python-pip zsh \
   curl build-essential runit openssh-server ruby tree vim openssh-server sudo \
   lshw
-
-# If you are adding packages, add to the end so we don't re-install all of these
-# They are broken up to take advantage of the Docker cache
-RUN apt-get -y install git python3-distupgrade gdb build-essential redis-server
-RUN apt-get -y install redis-tools maven libudev-dev libparted0-dev
-RUN apt-get -y install python2.7 python-dev python-pip python-boto
-RUN apt-get -y install libpcre3-dev libpcre3 libssl-dev libfuse-dev libevent-dev
-RUN apt-get -y install bison flex ragel ccache
-RUN apt-get -y install libboost-log1.54-dev libboost-program-options1.54-dev
-RUN apt-get -y install libboost-timer1.54-dev libboost-thread1.54-dev libboost-regex1.54-dev
-RUN apt-get -y install libical-dev libical1 libleveldb-dev libncurses-dev
-RUN apt-get -y install python-yaml libyaml-dev libconfig-dev libconfig++-dev libfiu-dev fiu-utils
-RUN apt-get -y install host npm nodejs ruby ruby-sass rake python-argh
+RUN apt-get -y install libevent-dev libncurses-dev
+RUN apt-get -y install host npm nodejs ruby ruby-sass rake 
 
 # Install the Docker client
 RUN curl -sSL https://get.docker.io/ubuntu/ | sudo sh
@@ -42,27 +26,9 @@ RUN curl -sSL https://get.docker.io/ubuntu/ | sudo sh
 # We symlink in support of tools expecting a node binary
 RUN ln -s /usr/bin/nodejs /usr/bin/node
 
-# FDS Packages
-RUN wget -O - http://coke.formationds.com:8000/fds.repo.gpg.key 2>/dev/null | apt-key add -
-RUN echo 'deb http://coke.formationds.com:8000 fds test' > /etc/apt/sources.list.d/fds.list
-RUN apt-get update
-RUN apt-get -y install fds-pkghelper fds-pkg fds-pkgtools fds-systemdir fds-coredump
-
 # Httpie
 RUN easy_install httpie
 RUN pip install https://github.com/Lokaltog/powerline/tarball/develop
-
-# Java
-RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
-RUN apt-get -y install oracle-java8-installer
-ENV JAVA_HOME /usr/lib/jvm/java-8-oracle/
-
-# Test deps
-RUN pip install unittest-xml-reporting
-RUN pip install paramiko scp redis
-
-# FDS Console deps
-RUN pip install thrift tabulate
 
 # Tmux
 RUN wget http://downloads.sourceforge.net/tmux/tmux-1.9a.tar.gz
@@ -80,11 +46,20 @@ RUN git clone https://github.com/robbyrussell/oh-my-zsh.git /home/pairing/.oh-my
 RUN chown -R pairing /home/pairing/.oh-my-zsh
 
 RUN pip install --upgrade --user git+git://github.com/Lokaltog/powerline
-RUN git clone https://github.com/adnichols/tmux-and-vim.git ~/.janus
-RUN bash -l -c ~/.janus/setup/setup.sh
+RUN git clone https://github.com/adnichols/tmux-and-vim.git /home/pairing/.janus
+RUN bash -l -c /home/pairing/.janus/setup/setup.sh
 ADD resources/zshrc.default /home/pairing/.zshrc
 ADD resources/tmux.conf /home/pairing/.tmux.conf
-ADD resources/clone-fds-src.sh /home/pairing/clone-fds-src.sh
+#ADD resources/clone-fds-src.sh /home/pairing/clone-fds-src.sh
+
+RUN mkdir /home/pairing/projects
+RUN git clone https://0e02efff0ef46f7a2002decdca4912db60153ba6@github.com/fds-dev/fds-src.git /home/pairing/projects/fds-src
+
+WORKDIR /home/pairing/projects/fds-src/source
+RUN touch ~/.ihaveaswapfile
+RUN git checkout move-devsetup-to-chef
+RUN make devsetup
+RUN git remote set-url origin https://github.com/fds-dev/fds-src
 
 USER root
 
@@ -98,10 +73,8 @@ RUN mkdir /root/.ssh
 RUN chmod 700 /root/.ssh
 ADD resources/ssh/id_rsa.pub /root/.ssh/authorized_keys
 ADD resources/ssh/config /root/.ssh/config
-ADD resources/profile.d/java.sh /etc/profile.d/java.sh
-
-RUN mkdir /home/pairing/projects
 RUN chown pairing /home/pairing/projects
+
 
 EXPOSE 22
 EXPOSE 8000
