--- a/source/orch-mgr/om-dlt/Makefile
+++ b/source/orch-mgr/om-dlt/Makefile
@@ -4,18 +4,7 @@ user_rtime_env    := user
 user_build_dir    :=
 user_incl_dir     := ../include $(topdir)
 user_hh           := $(wildcard *.h)
-user_cpp          := \
-    OmResources.cpp \
-    OmNodeResources.cpp \
-    OmDeploy.cpp \
-    OmDmtDeploy.cpp \
-    OmClusMap.cpp \
-    OmDataPlacement.cpp \
-    OmPlacementAlgorithms.cpp \
-    OmVolumePlacement.cpp \
-    OmVolPlacementAlgo.cpp \
-	OmVolume.cpp
-
+user_cpp          := $(wildcard *.cpp)
 user_ar_libs      := fds-om-dlt
 fds-om-dlt        := $(user_cpp)
 
