--- a/source/unit-test/stor-mgr/sm_ut.conf
+++ b/source/unit-test/stor-mgr/sm_ut.conf
@@ -30,6 +30,16 @@ fds:
 
         enable_graphite=false
     }
+    obj_persist_ut:
+    {
+	/* Log file */
+	logfile="sm_obj_persist_ut.log"
+
+	/* Log severity */
+        log_severity="debug"
+
+        enable_graphite=false
+    }
     meta_ut:
     {
 	/* Log file */
