Added disable_qos option to disable qos ctrl in am/sm/dm (alltogether); In that case, enqueue IO directly schedules operation on one of qos threads, instead of putting to qeueue and running through qos dispatcher.

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -15,6 +15,8 @@ fds: {
 	keymanager_password="exotic sparrow"
     }
 
+    disable_qos = false
+
     plat: {
         /* process id */
         id = "auto"
@@ -251,6 +253,7 @@ fds: {
 	enable_nbd_log=true
 	enable_nbd_block_exclusion=false
 	fdsn_server_threads=30
+        qos_threads=50
 
         threadpool: {
             max_task    = 10
