--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -23,7 +23,7 @@ fds: {
         logfile = "pltform"
 
         /* Log severity */
-        log_severity = "trace"
+        log_severity = "crit"
 
         /* Control path port */
         platform_port = 7000
@@ -79,7 +79,7 @@ fds: {
         logfile = "dm"
 
         /* Log severity */
-        log_severity = "trace"
+        log_severity = "crit"
 
 	cache: {
 	    /* Default max entries in a volume's DM catalog cache */
@@ -143,7 +143,7 @@ fds: {
         logfile="sm"
 
         /* Log severity */
-        log_severity = "trace"
+        log_severity = "crit"
 
         /* verify data */
         data_verify = true
@@ -235,7 +235,7 @@ fds: {
         perf: {
             enable=true
         }
-        log_severity = "trace"
+        log_severity = "crit"
         logfile      = "am"
         om_ip        = "127.0.0.1"
         om_port      = 8904
@@ -309,7 +309,7 @@ fds: {
     {
         id="om"
         prefix=""
-        log_severity = "trace"
+        log_severity = "crit"
         logfile="om"
         config_port=8903
         control_port=8904
@@ -338,7 +338,7 @@ fds: {
         id = "checker"
         path = "/home/bao_pham/temp/skinet2"
         logfile = "checker"
-        log_severity = "trace"
+        log_severity = "crit"
 
         /* Control path port */
         control_port = 6991
