--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -273,7 +273,7 @@ fds: {
 	/* Internal testing related info */
 	testing: {
             /* Toggle old or new processing path */
-	    toggleNewPath = false
+	    toggleNewPath = true
 	    /* Forces all AM dispatcher APIs to immediately return success */
 	    uturn_dispatcher_all = false
 	    /* Test mode to bypass local catalog cache */
