First check in of AM block driver using libev. Avoid include template header file in commonly included file to speed up complication time. Initial check-in for am probe using the new framework. Add conditional env var to skip UI build.

--- a/source/access-mgr/Makefile
+++ b/source/access-mgr/Makefile
@@ -2,7 +2,13 @@ topdir            := ..
 user_target       := exe
 user_rtime_env    := user
 speedup           := -j 6
-user_build_dir    := include amlib stor-hvisor platform
+user_build_dir    := \
+    include \
+    amlib \
+    stor-hvisor \
+    platform \
+    block
+
 user_incl_dir     := stor-hvisor include
 user_cpp_flags    :=
 user_fds_so_libs  :=
