--- a/source/java/Makefile
+++ b/source/java/Makefile
@@ -28,9 +28,11 @@ compile:
 	@mvn install -f thrift-pom.xml --batch-mode
 	@mvn -Dmaven.test.skip=true assembly:directory -Dproject.build.dir=$(comm_dir_lib)/java --batch-mode
 	@mkdir $(comm_dir_lib)/admin-webapp
+ifndef SKIP_UI_BUILD
 	#@cd admin-webapp; npm install; npm install bower; CI=true node_modules/bower/bin/bower install; node_modules/grunt-cli/bin/grunt release
 	@cd admin-webapp; npm install; CI=true node_modules/bower/bin/bower install; node_modules/grunt-cli/bin/grunt release
 	@cp -r admin-webapp/app/* $(comm_dir_lib)/admin-webapp
+endif
 	@cp -r demo $(comm_dir_lib)
 	@cp smokeTest $(main_dir_tools)
 
