--- a/source/unit-test/fds-probe/am/Makefile
+++ b/source/unit-test/fds-probe/am/Makefile
@@ -1,7 +1,7 @@
 probe_topdir      := ..
 user_incl_dir     :=
 
-user_json         := o.json
+user_json         := in.json
 user_cpp_flags    :=
 user_fds_so_libs  :=
 user_fds_ar_libs  := 
@@ -13,11 +13,11 @@ user_no_style     := $(patsubst %.json,%.h,$(user_json) adapter.h)
 
 user_cc           := ngx_modules.c
 user_cpp          := \
-    test-main.cpp \
+    am-probe.cpp \
     probe-adapter.cpp \
     adapter.cpp
 
-user_bin_exe      := example-s3
-example-s3        := $(user_cpp) $(user_cc)
+user_bin_exe      := am-probe
+am-probe          := $(user_cpp) $(user_cc)
 
 include $(probe_topdir)/Makefile.svc
