Fix build errors. Include new test to target build.

--- a/source/unit-test/fds-probe/am/Makefile
+++ b/source/unit-test/fds-probe/am/Makefile
@@ -5,7 +5,8 @@ user_json         := in.json
 user_cpp_flags    :=
 user_fds_so_libs  :=
 user_fds_ar_libs  := 
-user_non_fds_libs :=
+user_non_fds_libs := \
+	ev
 
 # Don't do style check on auto gen code.
 user_hh           := $(wildcard *.h)
