--- a/source/unit-test/svc-layer/Makefile
+++ b/source/unit-test/svc-layer/Makefile
@@ -75,7 +75,8 @@ user_no_style     :=  \
 
 user_cpp          := \
 	th_am.cpp \
-	th_sm.cpp
+	th_sm.cpp \
+	threadpool_test.cpp
 
 user_clean	  := \
 	$(wildcard svc_constants.*) \
@@ -86,9 +87,11 @@ user_clean	  := \
 
 user_bin_exe      := \
 	th_am \
-	th_sm
+	th_sm \
+	threadpool_test
 
 th_am := th_am.cpp svc_constants.cpp svc_types.cpp TestAMSvc.cpp TestSMSvc.cpp ngx_modules.c
 th_sm := th_sm.cpp svc_constants.cpp svc_types.cpp TestAMSvc.cpp TestSMSvc.cpp ngx_modules.c
+threadpool_test := threadpool_test.cpp ngx_modules.c
 
 include $(topdir)/Makefile.incl
