--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -176,6 +176,11 @@
             <artifactId>bcprov-ext-jdk15on</artifactId>
             <version>1.51</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.5.1</version>
+        </dependency>
 
       <!-- Togglz Dependencies -->
       <dependency>
