Fixup fds_dev Dockerfile to correctly use fds_base as FROM

--- a/docker/dev_image/Dockerfile
+++ b/docker/dev_image/Dockerfile
@@ -1,4 +1,4 @@
-FROM coke.formationds.com:5000/spoon-base
+FROM coke.formationds.com:5000/fds_base
 MAINTAINER Aaron Nichols <aaron@formationds.com>
 #
 USER pairing
